[gd_scene load_steps=11 format=3 uid="uid://c5kj1uj0ohnmm"]

[ext_resource type="Script" uid="uid://r5juyuukwrew" path="res://ui/settings/setting_bool.gd" id="1_0smb8"]
[ext_resource type="Theme" uid="uid://c8lf57q2f23tp" path="res://ui/theme/menu_theme.tres" id="1_b6avg"]
[ext_resource type="PackedScene" uid="uid://b1wsbkovx87xh" path="res://ui/label.tscn" id="3_ejw1u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ejw1u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s1diy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o2jme"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_na5e0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kxv6b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c1ghm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_skb08"]

[node name="SettingBool" type="PanelContainer"]
texture_filter = 1
offset_right = 204.0
offset_bottom = 7.0
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("1_b6avg")
script = ExtResource("1_0smb8")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="LabelName" parent="HBoxContainer/HBoxContainer" instance=ExtResource("3_ejw1u")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ejw1u")
no_padding = true
text = "test"

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_type_variation = &"SettingControl"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 4

[node name="LabelValue" parent="HBoxContainer/PanelContainer/HBoxContainer" instance=ExtResource("3_ejw1u")]
unique_name_in_owner = true
layout_mode = 2
text = "Off"
color_override = 4

[node name="CheckButton" type="CheckButton" parent="HBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxEmpty_s1diy")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_o2jme")
theme_override_styles/hover = SubResource("StyleBoxEmpty_na5e0")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_kxv6b")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_c1ghm")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_skb08")
